--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 
 <!-- =============== Title ================ -->
@@ -32,10 +31,10 @@
 </li>
 <li>
   <a href="adminPrediction">
-      <span class="icon">
-          <ion-icon name="sparkles-outline"></ion-icon>
-      </span>
-      <span class="title">PREDICTIVE</span>
+    <span class="icon">
+      <ion-icon name="sparkles-outline"></ion-icon>
+    </span>
+    <span class="title">PREDICTIVE</span>
   </a>
 </li>
 <li>
@@ -60,25 +59,25 @@
 {% block popupmessage %}
 {% with messages = get_flashed_messages(with_categories=true) %}
 {% if messages %}
-  {% for category, message in messages %}
-  <div id="flash-message" class="info">
-    <div class="info__icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" height="24" fill="none">
-        <path fill="#393a37"
-          d="m12 1.5c-5.79844 0-10.5 4.70156-10.5 10.5 0 5.7984 4.70156 10.5 10.5 10.5 5.7984 0 10.5-4.7016 10.5-10.5 0-5.79844-4.7016-10.5-10.5-10.5zm.75 15.5625c0 .1031-.0844.1875-.1875.1875h-1.125c-.1031 0-.1875-.0844-.1875-.1875v-6.375c0-.1031.0844-.1875.1875-.1875h1.125c.1031 0 .1875.0844.1875.1875zm-.75-8.0625c-.2944-.00601-.5747-.12718-.7808-.3375-.206-.21032-.3215-.49305-.3215-.7875s.1155-.57718.3215-.7875c.2061-.21032.4864-.33149.7808-.3375.2944.00601.5747.12718.7808.3375.206.21032.3215.49305.3215.7875s-.1155.57718-.3215.7875c-.2061.21032-.4864.33149-.7808.3375z">
-        </path>
-      </svg>
-    </div>
-    <div class="info__title">{{ message }}</div>
-    <div class="info__close">
-      <svg height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="m15.8333 5.34166-1.175-1.175-4.6583 4.65834-4.65833-4.65834-1.175 1.175 4.65833 4.65834-4.65833 4.6583 1.175 1.175 4.65833-4.6583 4.6583 4.6583 1.175-1.175-4.6583-4.6583z"
-          fill="#393a37"></path>
-      </svg>
-    </div>
+{% for category, message in messages %}
+<div id="flash-message" class="info">
+  <div class="info__icon">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" height="24" fill="none">
+      <path fill="#393a37"
+        d="m12 1.5c-5.79844 0-10.5 4.70156-10.5 10.5 0 5.7984 4.70156 10.5 10.5 10.5 5.7984 0 10.5-4.7016 10.5-10.5 0-5.79844-4.7016-10.5-10.5-10.5zm.75 15.5625c0 .1031-.0844.1875-.1875.1875h-1.125c-.1031 0-.1875-.0844-.1875-.1875v-6.375c0-.1031.0844-.1875.1875-.1875h1.125c.1031 0 .1875.0844.1875.1875zm-.75-8.0625c-.2944-.00601-.5747-.12718-.7808-.3375-.206-.21032-.3215-.49305-.3215-.7875s.1155-.57718.3215-.7875c.2061-.21032.4864-.33149.7808-.3375.2944.00601.5747.12718.7808.3375.206.21032.3215.49305.3215.7875s-.1155.57718-.3215.7875c-.2061.21032-.4864.33149-.7808.3375z">
+      </path>
+    </svg>
   </div>
-  {% endfor %}
+  <div class="info__title">{{ message }}</div>
+  <div class="info__close">
+    <svg height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="m15.8333 5.34166-1.175-1.175-4.6583 4.65834-4.65833-4.65834-1.175 1.175 4.65833 4.65834-4.65833 4.6583 1.175 1.175 4.65833-4.6583 4.6583 4.6583 1.175-1.175-4.6583-4.6583z"
+        fill="#393a37"></path>
+    </svg>
+  </div>
+</div>
+{% endfor %}
 {% endif %}
 {% endwith %}
 {% endblock %}
@@ -135,19 +134,108 @@
     </div>
   </div>
 
-<!-- ====== Bar Chart ====== -->
-<div class="container mt-4">
-  <div class="row justify-content-center">
-    <div class="col-lg-8 col-md-10 col-sm-12">
-      <div class="adminGraph">
-        <canvas id="barChart"></canvas>
+  <!-- ====== Bar Chart ======
+  <div class="container mt-4">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 col-md-10 col-sm-12">
+        <div class="adminGraph">
+          <canvas id="barChart"></canvas>
+        </div>
       </div>
     </div>
+  </div> -->
+
+  <div class="dashboardOne">
+    <!-- ------ LIST ------ -->
+    <div class="graph">
+      <div class="cardHeader">
+          <h2>PREDICTION OVERVIEW</h2>
+      </div>
+      <div class="polarGraph">
+        <canvas id="polarAreaChart"></canvas> <!-- Canvas for the chart -->
+      </div>
   </div>
+
+    <!-- ------ ADD/UPDATE ------ -->
+    <div class="dashboardTwo newData-two">
+      <div class="cardHeader">
+        <h2>[ DASHBOARD TITLE ONE ]</h2>
+      </div>
+    </div>
+
+    <div class="dashboardThree newData-three">
+      <div class="cardHeader">
+        <h2>[ DASHBOARD TITLE TWO ]</h2>
+      </div>
+    </div>
+</div>
+
 </div>
 
 <!-- Add Chart.js library -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+<script>
+  const graduationStatusCounts = JSON.parse('{{ graduation_status_counts | tojson | safe }}');
+  
+  const onTimeCount = graduationStatusCounts.on_time;         // Get count of students graduating on time
+  const notOnTimeCount = graduationStatusCounts.not_on_time;  // Get count of students not graduating on time
+  const notPredictedCount = graduationStatusCounts.not_predicted; // Get count of students with no prediction
+
+  console.log('On Time Count:', onTimeCount);               // Debugging line
+  console.log('Not On Time Count:', notOnTimeCount);         // Debugging line
+  console.log('Not Predicted Count:', notPredictedCount);     // Debugging line
+
+  // Now you can use these counts in your polar area chart data
+  const ctx = document.getElementById('polarAreaChart').getContext('2d');
+
+  const polarAreaChart = new Chart(ctx, {
+      type: 'polarArea',
+      data: {
+          labels: ['Graduating On Time', 'Will Not Graduate On Time', 'Status Not Predicted'],
+          datasets: [{
+              label: 'Student Graduation Status',
+              data: [onTimeCount, notOnTimeCount, notPredictedCount],
+              backgroundColor: ['rgba(54, 162, 235, 0.5)', 'rgba(255, 99, 132, 0.5)', 'rgba(255, 206, 86, 0.5)'],
+              borderColor: ['rgba(54, 162, 235, 1)', 'rgba(255, 99, 132, 1)', 'rgba(255, 206, 86, 1)'],
+              borderWidth: 1
+          }]
+      },
+      options: {
+          responsive: true,
+          maintainAspectRatio: false,
+          plugins: {
+              legend: {
+                  position: 'bottom',
+                  labels: {
+                      font: {
+                          size: 10,
+                      }
+                  }
+              },
+              tooltip: {
+                  callbacks: {
+                      label: function(tooltipItem) {
+                          return tooltipItem.label + ': ' + tooltipItem.raw + ' Students';
+                      }
+                  }
+              }
+          },
+          scales: {
+              r: {
+                  ticks: {
+                      display: true,
+                      color: '#999',
+                      font: {
+                          size: 10, // Font size for radial ticks
+                      }
+                  }
+              }
+          }
+      }
+  });
+</script>
 
 <!-- Add JavaScript code to fetch data and create chart -->
 <script>
@@ -186,7 +274,7 @@
               display: true,
               position: 'top',
               labels: {
-                generateLabels: function(chart) {
+                generateLabels: function (chart) {
                   return [
                     {
                       text: 'Will Graduate On Time\n(WGOT)', // New line for WGOT
