--- a/website/static/style.css
+++ b/website/static/style.css
@@ -2977,39 +2977,21 @@ form {
 
 
 
-
-
-
 .dashboardOne {
-  position: relative;
-  width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr; /* Two columns */
+  grid-template-columns: 1fr 1fr; /* Two equal columns */
+  grid-template-rows: auto auto auto; /* Two rows */
   grid-gap: 20px;
 }
 
+/* Card Styling */
 .dashboardOne .cardHeader h2 {
   color: var(--black2);
   font-size: 1rem;
   font-weight: 400;
 }
 
-.dashboardOne .graph {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  min-height: 335px;
-  background: var(--white);
-  padding: 20px;
-  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-  border-radius: 20px;
-}
-
-.dashboardOne .dashboardTwo {
-  display: flex; 
-  flex-direction: column; /* Ensure content inside stretches vertically */
-  gap: 20px;
+.dashboardOne .graph, .dashboardOne .dashboardTwo {
   background: var(--white);
   padding: 20px;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
@@ -3018,28 +3000,81 @@ form {
 }
 
 .dashboardOne .dashboardThree {
-  display: flex; 
-  flex-direction: column; /* Ensure content inside stretches vertically */
-  gap: 20px;
+  grid-column: 1 / span 2; /* Make DIV3 span across both columns */
   background: var(--white);
   padding: 20px;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   border-radius: 20px;
-  min-height: 335px;
+  min-height: 500px;
 }
 
-/* Make the second div (DASHBOARD TITLE ONE) stretch down to cover the space */
-.dashboardOne .newData-two {
-  grid-column: 2; /* Position it in the second column */
-  grid-row: 1 / span 2; /* Make it span both rows */
+.dashboardOne .dashboardFour, .dashboardOne .dashboardFive {
+  background: var(--white);
+  padding: 20px;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+  border-radius: 20px;
+  min-height: 300px;
 }
 
 .dashboardOne .cardHeader {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .polarGraph {
   padding: 0px;
+}
+
+.carousel-controls {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+.carousel-controls button {
+  cursor: pointer;
+  padding: 5px 10px;
+  background-color: #137b35;
+  color: white;
+  border: none;
+  border-radius: 4px;
+}
+
+.cardBox2 {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+.cardBox2 .card {
+  position: relative;
+  background: var(--white);
+  padding: 25px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  border: none;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+}
+
+.cardBox2 .card .numbers {
+  position: relative;
+  font-weight: 500;
+  font-size: 2.5rem;
+  color: var(--green);
+}
+
+.cardBox2 .card .cardName {
+  color: var(--black2);
+  font-size: 1.1rem;
+  margin-top: 5px;
+}
+
+.cardBox2 .card .iconBx {
+  font-size: 2.5rem;
+  color: var(--black2);
 }
